--- a/website/content/en/docs/migration/v0.1.0-migration-guide.md
+++ b/website/content/en/docs/migration/v0.1.0-migration-guide.md
@@ -1,4 +1,7 @@
-# Operator SDK Migration Guide from v0.0.x to v0.1.0
+---
+title: Operator SDK Migration Guide from v0.0.x to v0.1.0
+linkTitle: v0.0.x to v0.1.0
+---
 
 This document describes how to migrate an operator project built using Operator SDK `v0.0.x` to the project structure required by `v0.1.0`.
 
